# error

./: CMakeLists.txt  README.md
.github/workflows/: error-cross-platform-ci.yml  error-strict-ci.yml
cmake/: vix_errorConfig.cmake.in
include/vix/error/: Error.hpp  ErrorCategory.hpp  ErrorCode.hpp  Exception.hpp  Result.hpp  all.hpp  error.hpp
src/: Error.cpp  ErrorCategory.cpp  Exception.cpp
test/: CMakeLists.txt  error_test.cpp
